b=17798. Changed WipeContainingBlock() to remove the frames it is deleting from the content to frame map and undisplayed content map